--- a/webapp/main.html
+++ b/webapp/main.html
@@ -98,8 +98,10 @@
               <button type="button" class="btn btn-default"><a target="_blank" href="https://cps.qixin18.com/apps/cps/ljj1048581/product/detail?prodId={{product_dict["data"]["data"]["productId"]}}&planId={{product_dict["data"]["data"]["planId"]}}&from=spks&tenantId=-1">点此投保</a></button>
               <button type="button" class="btn btn-default showLink" url-value="https://cps.qixin18.com/apps/cps/ljj1048581/product/detail?prodId={{product_dict["data"]["data"]["productId"]}}&planId={{product_dict["data"]["data"]["planId"]}}&from=spks&tenantId=-1">显示链接</button>
             {% elif product_dict["program_id"] == 1002 %}
-              <button type="button" class="btn btn-default"><a target="_blank" href="https://www.baodan360.com/insurance/fin?id={{product_dict["product_id"]}}&chn=cps_154683494">点此投保</a></button>
-              <button type="button" class="btn btn-default showLink" url-value="https://www.baodan360.com/insurance/fin?id={{product_dict["product_id"]}}&chn=cps_154683494">显示链接</button>
+              {% if product_dict["data"]["url"] != "" %}
+                <button type="button" class="btn btn-default"><a target="_blank" href="{{product_dict["data"]["url"]}}">点此投保</a></button>
+                <button type="button" class="btn btn-default showLink" url-value="{{product_dict["data"]["url"]}}">显示链接</button>
+              {% endif %}
             {% elif product_dict["program_id"] == 1003 %}
               {% if "productDetail" in product_dict["data"] %}
                 <button type="button" class="btn btn-default"><a target="_blank" href="{{product_dict["data"]["productDetail"]}}">点此投保</a></button>
