--- a/webapp/main_v2.html
+++ b/webapp/main_v2.html
@@ -287,7 +287,7 @@
                         <td>{{ details_dict["payDesc"] }}</td>
                         <td>{{ details_dict["insureDesc"] }}</td>
                         {% set firstRate_v2 =  details_dict["firstRate"] | float %}
-                        <td>{{ firstRate_v2*0.94 }}%</td>
+                        <td>{{ firstRate_v2*0.94|float|round(1,"common")}}%</td>
                         {# <td>{{ details_dict["secondRate"] }}</td> #}
                     </tr>
                   {% endfor %}
@@ -421,19 +421,19 @@
                                             {% for values_list in values %}
                                               <div class="tree-table fee-row">
                                                     {% for item in values_list %}
-                                                      {% if loop.index == 4 %}
+                                                      {% if loop.index == 3 %}
                                                         {% set firstrate = item | replace("%", "") %}
                                                         {% if "+" in firstrate%}
                                                           {% set firstrate_list = firstrate.split("+") %}
                                                           {% set real_rate_1 = firstrate_list[0] | float %}
                                                           {% set real_rate_2 = firstrate_list[1] | float %}
-                                                          <div class="fee-td "><div>{{ real_rate_1*0.94|float}}%+{{real_rate_2*0.94|float}}%</div></div>
+                                                          <div class="fee-td "><div>{{ real_rate_1*0.94|float}}%+{{real_rate_2*0.94|float|round(1,"common")}}%</div></div>
                                                         {% else %}
                                                           {% set real_rate = firstrate | float %}
-                                                          <div class="fee-td "><div>{{ real_rate*0.94|float }}%</div></div>
+                                                          <div class="fee-td "><div>{{ real_rate*0.94|float|round(1,"common") }}%</div></div>
                                                         {% endif %}
                                                         
-                                                      {% elif loop.index == 5 %}
+                                                      {% elif loop.index == 4 %}
                                                         <!-- <div class="fee-td "><div>{{ item }}</div></div> -->
                                                       {% else %}
                                                         <div class="fee-td "><div>{{ item }}</div></div>
