--- a/webapp/main_v2.html
+++ b/webapp/main_v2.html
@@ -287,7 +287,7 @@
                         <td>{{ details_dict["payDesc"] }}</td>
                         <td>{{ details_dict["insureDesc"] }}</td>
                         {% set firstRate_v2 =  details_dict["firstRate"] | float %}
-                        <td>{{ firstRate_v2*0.94|float|round(1,"common")}}%</td>
+                        <td>{{ firstRate_v2*0.94 | round(1,"common")}}%</td>
                         {# <td>{{ details_dict["secondRate"] }}</td> #}
                     </tr>
                   {% endfor %}
@@ -427,10 +427,10 @@
                                                           {% set firstrate_list = firstrate.split("+") %}
                                                           {% set real_rate_1 = firstrate_list[0] | float %}
                                                           {% set real_rate_2 = firstrate_list[1] | float %}
-                                                          <div class="fee-td "><div>{{ real_rate_1*0.94|float}}%+{{real_rate_2*0.94|float|round(1,"common")}}%</div></div>
+                                                          <div class="fee-td "><div>{{ real_rate_1*0.94 | round(1,"common")}}%+{{real_rate_2*0.94 | round(1,"common")}}%</div></div>
                                                         {% else %}
                                                           {% set real_rate = firstrate | float %}
-                                                          <div class="fee-td "><div>{{ real_rate*0.94|float|round(1,"common") }}%</div></div>
+                                                          <div class="fee-td "><div>{{ real_rate*0.94|float | round(1,"common") }}%</div></div>
                                                         {% endif %}
                                                         
                                                       {% elif loop.index == 4 %}
