--- a/webapp/main_v2.html
+++ b/webapp/main_v2.html
@@ -566,6 +566,6 @@
 <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} ></script>
 <script src={{ url_for('static', path="/js/popper.min.js") }}></script>
 <script src={{ url_for('static', path="/js/bootstrap.min.js") }}></script>
-<script src={{ url_for('static', path='/js/index.js') }}></script>
+<script src={{ url_for('static', path='/js/index_v2.js') }}></script>
 </body>
 </html>
